--- a/index.html
+++ b/index.html
@@ -1,70 +1,15 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="utf-8">
         <title>Sound Visualization</title>
-        <script src="https://d3js.org/d3.v6.min.js"></script>
     </head>
+
     <body>
-        <div id="scatterplot"></div>
-        <script>
-            // Fetch data from Flask backend
-            d3.json('/random/1000', function(error, data) {
-                if (error) throw error;
-
-                // Map data to x and y axes
-                var mappedData = data.map(function(d) {
-                    return {
-                        x: d.x,
-                        y: d.y
-                    };
-                });
-
-                // Set up scatter plot dimensions
-                var margin = {top: 20, right: 20, bottom: 30, left: 40},
-                        width = 960 - margin.left - margin.right,
-                        height = 500 - margin.top - margin.bottom;
-
-                // Set up x and y scales
-                var x = d3.scaleLinear()
-                        .range([0, width]);
-
-                var y = d3.scaleLinear()
-                        .range([height, 0]);
-
-                // Set up x and y domains
-                x.domain(d3.extent(mappedData, function(d) { return d.x; })).nice();
-                y.domain(d3.extent(mappedData, function(d) { return d.y; })).nice();
-
-                // Set up x and y axes
-                var xAxis = d3.axisBottom(x),
-                        yAxis = d3.axisLeft(y);
-
-                // Create scatter plot
-                var svg = d3.select("#scatterplot").append("svg")
-                        .attr("width", width + margin.left + margin.right)
-                        .attr("height", height + margin.top + margin.bottom)
-                    .append("g")
-                        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-                svg.selectAll(".dot")
-                        .data(mappedData)
-                    .enter().append("circle")
-                        .attr("class", "dot")
-                        .attr("r", 3.5)
-                        .attr("cx", function(d) { return x(d.x); })
-                        .attr("cy", function(d) { return y(d.y); });
-
-                // Add x and y axes
-                svg.append("g")
-                        .attr("class", "x axis")
-                        .attr("transform", "translate(0," + height + ")")
-                        .call(xAxis);
-
-                svg.append("g")
-                        .attr("class", "y axis")
-                        .call(yAxis);
-            });
-        </script>
+        <div id="my_plot"></div>
+        <!-- <script type="module" src="plot.js"></script> -->
+        <script type="module" src="d3-plot.js"></script>
     </body>
+
 </html>
