--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
         <div id="my_plot"></div>
         <!-- <script type="module" src="plot.js"></script> -->
         <script type="module" src="d3-plot.js"></script>
+
+
+        <!DOCTYPE html>
+        <html>
+
+        <head>
+            <meta charset="utf-8">
+            <title>Music Visualization</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+
+        <body>
+
+            <footer>
+                <p>&copy; 2021 Music Visualization</p>
+            </footer>
+
+            <script src="https://d3js.org/d3.v7.min.js"></script>
+            <script src="app.js"></script>
+        </body>
+
+        </html>
+
     </body>
 
 </html>
