--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
         <title>Sound Visualization</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.js"></script>
         <script type="module" src="d3-plot.js"></script>
+        <link rel="stylesheet" type="text/css" href="fullpage.css" />
+    </head>
+
+
+    <body>
+        <div id="fullpage">
+            <div class="section" id="my_plot">Visualization 1
+                <h1> some random plot</h1>
+            </div>
+                
+            <div class="section" id="section1">Some section</div>
+            <div class="section" id="section2">Some section</div>
+            <div class="section" id="section3">Some section</div>
+            <div class="section" id="section4">Some section</div>
+        </div>
+
         <script type="text/javascript">
             var myFullpage = new fullpage('#fullpage', {
                 sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
                 anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
-                menu: '#menu',
                 slidesNavigation: true,
                 lazyLoad: true,
-                credits: {enabled: false},
                 licenseKey: 'gplv3-license'
-    });
+            });
         </script> 
-    </head>
-
-    <body>
-        <div id="fullpage">
-            <div class="section">Visualization 1</div>
-                <div id="my_plot"></div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
-        </div>
-
     </body>
 
 </html>
